登录图片替换。

--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -2,10 +2,10 @@
 {% block title %}一点礼品-登录{% endblock %}
 {% block content %}
     {% load static %}
-    <div class="container">
+    <div class="container"   style="min-height: calc(100vh - 503px);">
         <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"type="text/javascript"></script>
         <div class="login-center">
-            <div><img src="{% static 'gift_platform_site/images/Bitmap.png' %}"></div>
+            <div><img src="{% static 'gift_platform_site/images/login_cover.png' %}" style="width: 600px;height:400px;"></div>
             <div class="loginform">
                 <p>请登录</p>
 
