--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -2,7 +2,7 @@
 {% block title %}一点礼品-登录{% endblock %}
 {% block content %}
     {% load static %}
-    <div class="container"   style="min-height: calc(100vh - 265px);display: flex;align-items: center;">
+    <div class="container"   style="width:1000px;min-height: calc(100vh - 265px);display: flex;align-items: center;">
         <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"type="text/javascript"></script>
         <div class="login-center" style="margin-top:0px">
             <div><img src="{% static 'gift_platform_site/images/login_cover.png' %}" style="width: 600px;height:400px;"></div>
