调整登录页布局。

--- a/templates/share/base_layout.html
+++ b/templates/share/base_layout.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div style="background:#fff;">
-<div class="container" style="width: 1000px">
+<div class="container">
     <div class="reg-login-wrap">
         <a href="/home"><img class="logo" src="{%  static 'gift_platform_site/images/logo_index.png' %}" style="height: 55px;width:178px;"></a>
         <div class="tell">400-679-8289</div>
