--- a/templates/share/base_layout.html
+++ b/templates/share/base_layout.html
@@ -14,7 +14,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background: #333;">
 <div style="background:#fff;">
 <div class="container">
     <div class="reg-login-wrap">
@@ -26,7 +26,7 @@
 <hr class="hrline"/>
 {% block content %}
 {% endblock %}
-<div class="footer" style="position:absolute;width:100%;bottom:0px;">
+<div class="footer" style="margin-top: 0px;">
     <div class="container">
         <div class="item-wrap">
             <div class="footer-icon-group">
