--- a/templates/products/one_send_product_list.html
+++ b/templates/products/one_send_product_list.html
@@ -6,7 +6,7 @@
 <script src="{% static "gift_platform_site/js/jquery.fly.min.js" %}"></script>
 <div class="container"  style="min-height: calc(100vh - 503px);">
     <div class="bread-crumb">
-        <a href="#">首页</a>><a href="{% url 'gift_platform_site:one_send_products' %}">一件代发</a>
+        <a href="/home">首页</a>><a href="{% url 'gift_platform_site:one_send_products' %}">一件代发</a>
     </div>
     <div class="query-area">
         <div class="query-item-wrap" style="line-height: 30px;">
