--- a/templates/products/supplier_product_list.html
+++ b/templates/products/supplier_product_list.html
@@ -7,7 +7,7 @@
 <script src="{% static "gift_platform_site/js/jquery.fly.min.js" %}"></script>
     <div class="container"  style="min-height: calc(100vh - 503px);">
         <div class="bread-crumb">
-            <a href="/">首页</a>><a href="javascript:void(0)">{{ supplier.suppliername }}</a>
+            <a href="/home">首页</a>><a href="javascript:void(0)">{{ supplier.suppliername }}</a>
         </div>
             <div class="supplier-product-list">
                 <div class="supplier-item-header">
