--- a/templates/products/brand_product_list.html
+++ b/templates/products/brand_product_list.html
@@ -6,7 +6,7 @@
 <script src="{% static "gift_platform_site/js/jquery.fly.min.js" %}"></script>
 <div class="container"  style="min-height: calc(100vh - 503px);">
     <div class="bread-crumb">
-        <a href="#">首页</a>><a href="/product/brands">品牌</a>><a href="javascript:void(0);">{{ brand.name }}</a>
+        <a href="/home">首页</a>><a href="/product/brands">品牌</a>><a href="javascript:void(0);">{{ brand.name }}</a>
     </div>
     <div class="query-area">
         <div class="query-item-wrap">
