添加工信部链接。

--- a/templates/sign/register1.html
+++ b/templates/sign/register1.html
@@ -49,9 +49,7 @@
         </div>
     </div>
     <div class="copyright">
-        <div>
-            <p>上海简象网络科技有限公司 © 2018   沪ICP备 18016054号-1</p>
-        </div>
+            上海简象网络科技有限公司 © 2018   <a href="https://tsm.miit.gov.cn/dxxzsp/" target="_blank" style="color:#999">沪ICP备 18016054号-1</a>
     </div>
 </div>
 </body>
