--- a/templates/share/base_layout.html
+++ b/templates/share/base_layout.html
@@ -48,9 +48,7 @@
         </div>
     </div>
     <div class="copyright">
-        <div>
-            <p>上海简象网络科技有限公司 © 2018   沪ICP备 18016054号-1</p>
-        </div>
+        上海简象网络科技有限公司 © 2018   <a style="color:#999;" href="https://tsm.miit.gov.cn/dxxzsp/" target="_blank">沪ICP备 18016054号-1</a>
     </div>
 </div>
 </body>
