--- a/templates/share/base_layout_without_search.html
+++ b/templates/share/base_layout_without_search.html
@@ -130,7 +130,7 @@
     </div>
     <div class="copyright">
         <div>
-            <p>上海简象网络科技有限公司 © 2018   沪ICP备 18016054号-1</p>
+            上海简象网络科技有限公司 © 2018   <a style="color: #999;" href="https://tsm.miit.gov.cn/dxxzsp/" target="_blank">沪ICP备 18016054号-1</a>
         </div>
     </div>
 </div>
