--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -159,7 +159,9 @@
 			<span>核心管理</span>
 			<span>一键生成</span>
 		</div>
-		<div class="Copyright">上海简象网络科技有限公司 © 2018   沪ICP备 18016054号-1</div>
+		<div class="Copyright">
+            上海简象网络科技有限公司 © 2018   <a href="https://tsm.miit.gov.cn/dxxzsp/" target="_blank" style="color:#999">沪ICP备 18016054号-1</a>
+        </div>
     </div>
 </div>
 <script type="text/javascript">
