--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -160,7 +160,7 @@
 			<span>一键生成</span>
 		</div>
 		<div class="Copyright">
-            上海简象网络科技有限公司 © 2018   <a href="https://tsm.miit.gov.cn/dxxzsp/" target="_blank" style="color:#999">沪ICP备 18016054号-1</a>
+            上海简象网络科技有限公司 © 2018   <a href="https://beian.miit.gov.cn" target="_blank" style="color:#999">沪ICP备 18016054号-1</a>
         </div>
     </div>
 </div>
