--- a/templates/share/base_layout_reg.html
+++ b/templates/share/base_layout_reg.html
@@ -51,7 +51,7 @@
     </div>
     <div class="copyright">
         <div>
-            上海简象网络科技有限公司 © 2018   <a style="color: #999;" href="https://tsm.miit.gov.cn/dxxzsp/" target="_blank">沪ICP备 18016054号-1</a>
+            上海简象网络科技有限公司 © 2018   <a style="color: #999;" href="https://beian.miit.gov.cn" target="_blank">沪ICP备 18016054号-1</a>
         </div>
     </div>
 </div>
